[package]
name = "lmwrnglr"
version = "0.1.0"
description = "Multi-terminal manager for AI coding sessions (Tauri)"
authors = []
edition = "2021"
rust-version = "1.77.2"
default-run = "lmwrnglr"

[lib]
name = "lmwrnglr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
rand = "0.8"
dirs = "5"
which = "6"
notify = "6"
reqwest = { version = "0.12", features = ["json"] }
strip-ansi-escapes = "0.2"
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
